fix: scrollbar variables missing issue

--- a/apps/admin/src/index.css
+++ b/apps/admin/src/index.css
@@ -42,6 +42,9 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.795 0.184 86.047);
+
+  /* Scrollbar variables */
+  --sb-size: 6px;
 }
 
 .dark {
@@ -136,6 +139,9 @@
   --tracking-wide: calc(var(--tracking-normal) + 0.025em);
   --tracking-wider: calc(var(--tracking-normal) + 0.05em);
   --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+
+  --sb-track-color: var(--color-background);
+  --sb-thumb-color: var(--color-muted);
 }
 
 body {
